--- a/src/manifest.production.json
+++ b/src/manifest.production.json
@@ -7,7 +7,7 @@
     "scripts": ["/background.js"],
     "persistent": false
   },
-  "permissions": ["desktopCapture", "storage", "activeTab"],
+  "permissions": ["desktopCapture", "storage", "videoCapture"],
   "browser_action": {
     "default_popup": "popup.html"
   },
